--- a/src/components/Order/Order/Order.css
+++ b/src/components/Order/Order/Order.css
@@ -1,13 +1,8 @@
 .Order {
-  width: 100%;
-  border: 1px solid #eeeeee;
+  width: 80%;
+  border: 1px solid #eee;
+  box-shadow: 0 2px 3px #ccc;
   padding: 10px;
-  margin: 20px;
+  margin: 10px auto;
   box-sizing: border-box;
-}
-
-@media (min-width: 800px) {
-  .Order {
-    width: 700px;
-  }
 }
